# SyncSonicRaspberry

./: .gitignore  AGENTS.md  README.md  eas.json  get_pactl_cards.md  package-lock.json  package.json  pactl_list_cards.txt  reset_bt_adapters.sh  syncsonic.service  tamagui.config.ts
app/: help.tsx  (+4 more)
backend/: FOUNDATION_REORG_NOTES.md  MYPY_AUDIT.md  Makefile  README.md  action_request_handlers.py  actuation.py  connection_manager.py  pulse-headless.pa  pulseaudio_helpers.py  pyproject.toml  requirements.txt  reset_bt_adapters.sh  runtime-sync  sonos_discovery.py  start_syncsonic.sh  syncsonic-runtime-sync.service  syncsonic.service  ultrasonic_sync.py
backend/measurement/: __init__.py  _debug_anchor.py  _debug_envelope.py  _debug_gccphat.py  _filter_ctl.py  _live_measure.py  _set_delay_state.py  alignment_monitor.py  analyze_lag.py  calibrate_anchor.py  calibrate_one.py  calibrate_sequence.py  calibration_targets.py  correlation.py  eq_apply.py  eq_measurement.py  mic_capture.py  probe_signals.py  report.py  run_session.py  runtime_latency_service.py  runtime_probe_compare.py  service_env.py  slice4_observer.py  slice5_actuator.py  startup_tune.py  summarize_eq_baselines.py  test_analyze_lag.py  test_arrival_burst_actuation.py  test_runtime_latency_service.py  test_runtime_probe_compare.py  test_slice4_observer.py
backend/measurement/tests/: test_slice15_xcorr_envelope.py  test_slice5_actuator.py
backend/syncsonic_ble/: DEBUG_OUTPUT.md  main.py  requirements.txt  runtime_corrections.py  runtime_sync_service.py
backend/syncsonic_ble/coordinator/: __init__.py  coordinator.py  state.py
backend/syncsonic_ble/helpers/: actuation.py  actuation_backends.py  adapter_helpers.py  alignment_actuator.py  alignment_controller.py  analyze_bursts_debug.py  arrival_burst_actuation.py  audio_stream_service.py  dbus_helpers.py  device_labels.py  device_type_helpers.py  latency_setup.py  latency_test.py  pipewire_actuation_daemon.py  pipewire_alignment_maintenance.py  pipewire_control_plane.py  pipewire_dsp_contract.py  pipewire_dsp_node_manager.py  pipewire_dsp_runtime.py  pipewire_eq_transport.py  pipewire_filter_chain_driver.py  pipewire_graph_applier.py  pipewire_graph_executor.py  pipewire_graph_launcher.py  pipewire_observability.py  pipewire_processor_runtime.py  pipewire_profiler_monitor.py  pipewire_runtime.py  pipewire_transport.py  pulseaudio_helpers.py  sonos_controller.py  sonos_discovery.py  test_latency_manual.py  ultrasonic_sync.py
backend/syncsonic_ble/infra/: gatt_service.py
backend/syncsonic_ble/state_change/: action_planning.py  action_request_handlers.py
backend/syncsonic_ble/state_management/: connection_manager.py  device_manager.py  scan_manager.py
backend/syncsonic_ble/telemetry/: __init__.py  collector.py  event_writer.py
backend/syncsonic_ble/telemetry/samplers/: __init__.py  base.py  bluez_transport_sampler.py  pw_node_sampler.py  rssi_sampler.py  xrun_tail_sampler.py
backend/syncsonic_ble/tests/: test_runtime_corrections.py
backend/syncsonic_ble/utils/: constants.py  logging_conf.py
backend/tools/: pw_delay_filter.c  pw_eq_filter.c
backend/wireplumber/bluetooth.lua.d/: 80-syncsonic-bt-driver-priority.lua
(+145 files in other folders)
